--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,9 +180,20 @@ android {
 
         }
     }
+
+//     configurations.all {
+//         resolutionStrategy.force "com.android.support:appcompat-v7:28.0.0"
+//    }
 }
 
 dependencies {
+    def appcompat_version = "1.2.0"
+
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+        // For loading and tinting drawables on older versions of the platform
+    implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
+    // implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation project(':react-native-fs')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
