--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,11 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:3.5.3")
 
+        // def appcompat_version = "1.3.0-alpha02"
+
+        // implementation "androidx.appcompat:appcompat:$appcompat_version"
+        // For loading and tinting drawables on older versions of the platform
+        // implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -29,6 +34,10 @@ allprojects {
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        maven {
+            // Android JSC is installed from npm
+            url "$rootDir/../node_modules/expo-camera/android/maven"
         }
 
         google()
